# triginta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: aur.yml  ci.yml  homebrew.yml  native-package-smoke.yml  native-packages.yml  release.yml
docs/: configuration.md  dependency-license-review.md  install.md  nlp-locales.md  troubleshooting.md  user-guide.md
docs/assets/: README.md
packaging/aur/triginta-bin/: README.md
packaging/aur/triginta-bin/testdata/: sha256.sum
scripts/: check-aur-packaging.sh  generate-aur-triginta-bin.sh  package-linux-native-artifacts.sh  verify-native-linux-packages.sh  verify-release-artifacts.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/filters/: mod.rs
src/integrations/: mod.rs
src/storage/: mod.rs
src/task_nlp/: locales.rs  mod.rs
src/theme/: mod.rs
src/ui/: mod.rs  symbols.rs
tests/: bootstrap.rs
