[package]
name = "triginta"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A local-first TUI Pomodoro timer and task manager."
license = "GPL-3.0-only"
repository = "https://github.com/jeansimeoni/triginta"
homepage = "https://github.com/jeansimeoni/triginta"
keywords = ["pomodoro", "tui", "task-management", "sqlite", "todoist"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
crossterm = "0.28"
directories = "5.0"
ratatui = { version = "0.29", features = ["widget-calendar"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
