[package]
name = "triginta"
version = "0.1.4"
edition = "2024"
rust-version = "1.94"
description = "A local-first TUI Pomodoro timer and task manager."
license = "GPL-3.0-only"
repository = "https://github.com/jeansimeoni/triginta"
homepage = "https://triginta.app"
keywords = ["pomodoro", "tui", "task-management", "sqlite", "todoist"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["clock", "serde"] }
clap = { version = "=4.6.1", default-features = false, features = ["std", "help", "usage", "error-context"] }
crossterm = "=0.28.1"
directories = "=5.0.1"
ratatui = { version = "=0.29.0", features = ["widget-calendar"] }
rusqlite = { version = "=0.32.1", features = ["bundled", "chrono"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
time = "=0.3.47"
toml = "=0.8.23"
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
unicode-width = "=0.2.0"
ureq = { version = "=3.3.0", features = ["json"] }
uuid = { version = "=1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
